# TheStig

./: .pre-commit-config.yaml  .ruff.toml  README.md  manage.py  pyproject.toml
config/settings/: base.py  local.py
the_stig/: asgi.py  urls.py  wsgi.py
