[tool.poetry]
name = "the stig"
version = "0.1.0"
description = "Self-Hosted Vehicle Tracking"
authors = ["Karl Wooster <karl@woostertech.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.4"
django-allauth = "^65.3.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.2"
deptry = "^0.21.1"
commitizen = "^4.1.0"
pre-commit = "^4.0.1"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
